# BackendSeries-GitHub-User-Activity

./: README.md  main.py  pyproject.toml
github_activity/: main.py
github_user_activity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
