[project]
name = "github-user-activity"
version = "1.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
]

[project.scripts]
# format is: command-name = "module.file:function"
github-activity = "github_activity.main:cli"